src/test/ui/pattern/pattern-tyvar.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-tyvar.rs:17:18
   |
LL |       bar::t1(_, Some::<isize>(x)) => {
   |                  ^^^^^^^^^^^^^^^^ expected struct `std::vec::Vec`, found isize
   |
   = note: expected type `std::option::Option<std::vec::Vec<isize>>`
              found type `std::option::Option<isize>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
